<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_base"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_factura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_users" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hola" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_corres" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hola" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_totalprod" />

    <TextView
        android:id="@+id/tv_totalproductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hola" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_base"
        android:text="@string/txt_detalle" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color1"
            android:id="@+id/btn_product1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_1"/>

            <TextView
                android:id="@+id/btn_result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color2"
            android:id="@+id/btn_product2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_2"/>

            <TextView
                android:id="@+id/btn_result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color3"
            android:id="@+id/btn_product3">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_3"/>

            <TextView
                android:id="@+id/btn_result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color4"
            android:id="@+id/btn_product4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_4"/>

            <TextView
                android:id="@+id/btn_result4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color5"
            android:id="@+id/btn_product5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_5"/>

            <TextView
                android:id="@+id/btn_result5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color6"
            android:id="@+id/btn_product6">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_6"/>

            <TextView
                android:id="@+id/btn_result6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color7"
            android:id="@+id/btn_product7">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_7"/>

            <TextView
                android:id="@+id/btn_result7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color8"
            android:id="@+id/btn_product8">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_8"/>

            <TextView
                android:id="@+id/btn_result8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color9"
            android:id="@+id/btn_product9">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_producto_9"/>

            <TextView
                android:id="@+id/btn_result9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hash"/>

        </LinearLayout>

    </GridLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_base"
        android:layout_gravity="center"
        android:text="Share"/>




</LinearLayout>